--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- custom fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Monoton" rel="stylesheet">
 	<meta charset="utf-8">
 	<title></title>
 </head>
 <body>
-	<div>
-		<input id="user-input" type="text" name="zodiacSign">
-		<button id="submit-button" class="btn btn-success" onclick="submitZodiac()">Submit</button>
+	<div class="d-block col-sm-12 text-center">
+		<!-- animate heading w/ css  -->
+		<h1 class="my-3">Enter your <span class=" d-inline-block animated infinite pulse">Zodiac</span></h1>
+		<div class="my-5 input-group-lg">
+			<input class="py-2" id="user-input" type="text" name="zodiacSign">
+			<button id="submit-button" class="btn btn-success" onclick="submitZodiac()">Submit</button>
+		</div>
+		<img id="zodiac-grid" class="mx-auto my-3" src="img/zodiac.png" alt="grid-of-zodiac-signs">
 	</div>
 
 	<div class="container text-center">
