--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<title></title>
 </head>
 <body>
-	<div class="d-block col-sm-12 text-center">
+	<div class="d-block col-sm-12 my-5 text-center">
 		<!-- animate heading w/ css  -->
 		<h1 class="my-3">Enter your <span class=" d-inline-block animated infinite pulse">Zodiac</span></h1>
 		<div class="my-5 input-group-lg">
@@ -34,10 +34,12 @@
 		<img id="zodiac-grid" class="mx-auto my-3" src="img/zodiac.png" alt="grid-of-zodiac-signs">
 	</div>
 
-	<div class="container text-center">
-		<h1 id="title"></h1>
-		<img id="zodiac-img" src="">
-		<p id="message"></p>
+	<!--HTML elements used to add js content  -->
+
+	<div id="right-answer" class="container w-50 text-center">
+		<h1 class="my-3" id="title"></h1>
+		<img class="my-3 " id="zodiac-img" src="">
+		<p class="my-5" id="message"></p>
 	</div>
 
 
